# pruva-sandbox

./: .dockerignore  .gitignore  README.md  SECURITY_REPRODUCTIONS.md  TEST_COVERAGE_ANALYSIS.md  pruva-verify  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  run-reproduction.sh
docs/: PRODUCTION.md
hooks/: pre-commit
pruva-verify-rs/: Cargo.toml
pruva-verify-rs/src/: artifacts.rs  display.rs  env.rs  main.rs  metadata.rs  patch.rs  resolve.rs  rewrite.rs  runner.rs
repro/: reproduction_steps.sh
repro-patches/: REPRO-2026-00096.patch  REPRO-2026-00101.patch  REPRO-2026-00103.patch  REPRO-2026-00105.patch  REPRO-2026-00108.patch  REPRO-2026-00110.patch  REPRO-2026-00111.patch  REPRO-2026-00130.patch  REPRO-2026-00149.patch  REPRO-2026-00150.patch  REPRO-2026-00151.patch  REPRO-2026-00152.patch  REPRO-2026-00153.patch  REPRO-2026-00155.patch  REPRO-2026-00156.patch  REPRO-2026-00157.patch  REPRO-2026-00158.patch  REPRO-2026-00159.patch  REPRO-2026-00165.patch  REPRO-2026-00167.patch  REPRO-2026-00168.patch  REPRO-2026-00169.patch  REPRO-2026-00170.patch  REPRO-2026-00172.patch  REPRO-2026-00173.patch  REPRO-2026-00183.patch  REPRO-2026-00184.patch  REPRO-2026-00185.patch
scripts/: audit-pruva-handoff.sh  check-production-rollout-proof.sh  check-public-boundary.sh  check-repro-patch-branches.sh  codespace-start.sh  create-repro-branch.sh  detect-missing-deps.sh  generate-codespace-url.sh  sandbox_shell.py  sync-repro-branches.sh  test-codespaces-bulk-gh.sh  test-codespaces-gh.sh  test-codespaces.sh  test-production-parity.sh  (+1 more)
(+6 files in other folders)
