[package]
name = "pruva-verify"
version = "0.1.0"
edition = "2021"
description = "Verify Pruva vulnerability reproductions locally"
license = "MIT"

[[bin]]
name = "pruva-verify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
